--- a/CFD/CFD.vcxproj.filters
+++ b/CFD/CFD.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="MarchingCubes.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FluidSim.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenGLException.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MarchingCubes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FluidSim.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
