--- a/CFD/CFD.vcxproj.filters
+++ b/CFD/CFD.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="FluidSim.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LUTs.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenGLException.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FluidSim.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LUTs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
