--- a/src/CFD.vcxproj
+++ b/src/CFD.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{5279FDD3-C8AA-41F5-A997-39FFAA1AAFFC}</ProjectGuid>
     <RootNamespace>CFD</RootNamespace>
+    <ProjectName>FluidSimulation</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
